data/derived/sp14/progs/unify/prog1336.ml.out
Characters 87-88:
  | Sine e -> sin(pi *. eval e);;
                             ^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
